<resources>
    <string name="app_name">Music Fun</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
    <string name="title_user">Me</string>
    <string name="welcome">Welcome</string>
    <string name="app_description">Explore the latest hits on Music Fun!</string>
    <string name="disclaimer">Disclaimer</string>
    <string name="disclaimer_content">This is a project used to learn Kotlin development. The information, content, and functionality provided by this app are designed for educational and learning purposes. It is not intended for or suitable for business or commercial use.</string>
    <string name="get_started">Get Started</string>
    <string name="sign_in">Sign In</string>
    <string name="sign_in_description">Please sign in to continue</string>
    <string name="email_address">Email Address</string>
    <string name="password">Password</string>
    <string name="forget_your_password">Forget your password?</string>
    <string name="or_sign_in_with">Or sign in with</string>
    <string name="sign_in_with_google">Sign in with Google</string>
    <string name="sign_in_with_phone_number">Sign in with phone number</string>
    <string name="have_no_account">Don\'t have an account yet?</string>
    <string name="sign_up">Sign Up</string>
    <string name="sign_up_description">Welcome aboard! Get ready for your music journey?</string>
    <string name="enter_your_full_name">Enter your full name</string>
    <string name="enter_your_email_address">Enter your email address</string>
    <string name="enter_your_password">Enter your password</string>
    <string name="enter_your_password_again">Enter your password again</string>
    <string name="confirm">Confirm</string>
    <string name="have_an_account">Already has an account?</string>
    <string name="message">Message</string>
    <string name="email_verification_message">An email has been sent to your account,please verify it by clicking at the link and then sign in</string>
    <string name="phone_verification_message">An verification code has been sent your mobile phone</string>
    <string name="forget_password">Forget Password</string>
    <string name="forget_password_description">Please input your email to verify and reset password</string>
    <string name="send">Send</string>
    <string name="OTP_verification">OTP Verification</string>
    <string name="OTP">OTP</string>
    <string name="OTP_description">Please enter your one-time password (OTP) to verify your account</string>
    <string name="resend">Resend OTP</string>
    <string name="title_music">Music</string>
    <string name="title_MV">MV</string>
    <string name="title_me">Me</string>
    <string name="title_search">Search</string>
    <string name="title_upload">Upload</string>
    <string name="input_field_for_verification_code">Input field for verification code</string>
    <string name="resend_otp">RESEND OTP</string>
    <string name="title_profile">Profile</string>
    <string name="didn_t_receive_otp_code">Didn\'t receive OTP code?</string>
</resources>