<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/navigation_MV"
        android:icon="@drawable/baseline_music_video_24"
        android:title="@string/title_MV" />
    <item
        android:id="@+id/navigation_music"
        android:icon="@drawable/baseline_library_music_24"
        android:title="@string/title_music" />

    <item
        android:id="@+id/navigation_search"
        android:icon="@drawable/search"
        android:title="@string/title_search" />

    <item
        android:id="@+id/navigation_upload"
        android:icon="@drawable/upload"
        android:title="@string/title_upload" />

<!--    <item-->
<!--        android:id="@+id/navigation_me"-->
<!--        android:icon="@drawable/me"-->
<!--        android:title="@string/title_me" />-->



    <item
        android:id="@+id/navigation_user"
        android:icon="@drawable/svg_user"
        android:title="@string/title_user" />

</menu>