<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.authentication.SignUp">

    <TextView
        android:id="@+id/txvSignUP"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/sign_up"
        android:textColor="@color/horizontal_line_color"
        android:textSize="40sp"
        android:textStyle="bold"
        tools:layout_editor_absoluteX="29dp"
        tools:layout_editor_absoluteY="18dp" />


    <TextView
        android:id="@+id/txvSignUpDescription"
        android:layout_width="354dp"
        android:layout_height="70dp"
        android:alpha="0.8"
        android:text="@string/sign_up_description"
        android:textColor="@color/black"
        android:textSize="20sp"
        tools:layout_editor_absoluteX="29dp"
        tools:layout_editor_absoluteY="85dp" />

    <EditText
        android:id="@+id/editTextText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:ems="10"
        android:inputType="text"
        android:hint="@string/enter_your_full_name"
        android:background="@drawable/rounded_white_text_background"
        android:elevation="8dp"
        android:textSize="14sp"
        tools:layout_editor_absoluteX="36dp"
        tools:layout_editor_absoluteY="174dp"
        />

    <EditText
        android:id="@+id/editTextTextPassword"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="36dp"
        android:layout_marginTop="32dp"
        android:background="@drawable/rounded_white_text_background"
        android:elevation="8dp"
        android:ems="10"
        android:hint="@string/enter_your_password"
        android:inputType="textPassword"
        android:textSize="14sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editTextTextEmailAddress" />

    <EditText
        android:id="@+id/editTextTextEmailAddress"
        android:layout_width="287dp"
        android:layout_height="0dp"
        android:background="@drawable/rounded_white_text_background"
        android:elevation="8dp"
        android:ems="10"
        android:hint="@string/enter_your_email_address"
        android:inputType="textEmailAddress"
        android:singleLine="false"
        android:textColor="#000000"
        android:textSize="14sp"
        tools:layout_editor_absoluteX="36dp"
        tools:layout_editor_absoluteY="232dp" />

    <EditText
        android:id="@+id/editTextTextPasswordAgain"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:layout_marginTop="80dp"
        android:background="@drawable/rounded_white_text_background"
        android:elevation="8dp"
        android:ems="10"
        android:hint="@string/enter_your_password_again"
        android:inputType="textPassword"
        android:textSize="14sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editTextTextEmailAddress" />

    <Button
        android:id="@+id/btn_sign_up"
        android:layout_width="164dp"
        android:layout_height="0dp"
        android:background="@color/blue_300"
        android:text="@string/confirm"
        android:textColor="@color/white"
        android:textSize="16sp"
        tools:layout_editor_absoluteX="37dp"
        tools:layout_editor_absoluteY="479dp" />

    <TextView
        android:id="@+id/txvHaveAnAccount"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/have_an_account"
        tools:layout_editor_absoluteX="60dp"
        tools:layout_editor_absoluteY="598dp"

        />

    <Button
        android:id="@+id/btn_sign_in"
        style="@style/Widget.AppCompat.Button.Borderless"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="5sp"
        android:background="?android:attr/selectableItemBackground"
        android:minWidth="0dp"
        android:minHeight="0dp"
        android:text="@string/sign_in"
        android:textColor="#0A72BA"
        android:textSize="14sp"
        tools:layout_editor_absoluteX="64dp"
        tools:layout_editor_absoluteY="614dp" />


</androidx.constraintlayout.widget.ConstraintLayout>