<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/navigation_MV">

    <fragment
        android:id="@+id/navigation_MV"
        android:name="com.example.musicfun.ui.MV.MVFragment"
        android:label="@string/title_home"
        tools:layout="@layout/fragment_mv" />

    <fragment
        android:id="@+id/navigation_music"
        android:name="com.example.musicfun.ui.Music.MusicFragment"
        android:label="@string/title_dashboard"
        tools:layout="@layout/fragment_music" />

    <fragment
        android:id="@+id/navigation_search"
        android:name="com.example.musicfun.ui.Search.SearchFragment"
        android:label="@string/title_notifications"
        tools:layout="@layout/fragment_search" />
    <fragment
        android:id="@+id/navigation_user"
        android:name="com.example.musicfun.ui.user.UserFragment"
        android:label="Profile"
        tools:layout="@layout/fragment_user" />
</navigation>