<?xml version="1.0" encoding="utf-8"?>
<androidx.appcompat.widget.LinearLayoutCompat xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/background"
    android:orientation="vertical"
    tools:context=".ui.authentication.SignIn">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="27dp"
        android:layout_marginTop="20dp"
        android:text="@string/sign_in"
        android:textColor="@color/horizontal_line_color"
        android:textSize="40sp"
        android:textStyle="bold" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="27dp"
        android:layout_marginTop="5dp"
        android:alpha="0.8"
        android:text="@string/sign_in_description"
        android:textColor="@color/black"
        android:textSize="20sp" />

    <ImageView
        android:id="@+id/imageView2"
        android:layout_width="174dp"
        android:layout_height="126dp"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="30dp"
        app:srcCompat="@drawable/sign_in" />

    <EditText
        android:id="@+id/editTextTextEmailAddress"
        android:layout_width="match_parent"
        android:layout_height="51dp"
        android:layout_marginHorizontal="24dp"
        android:layout_marginTop="24dp"
        android:background="@drawable/rounded_white_text_background"
        android:elevation="8dp"
        android:ems="10"
        android:hint="@string/enter_your_email_address"
        android:inputType="textEmailAddress"
        android:paddingHorizontal="20dp"
        android:singleLine="true"
        android:textColor="#000000"
        android:textSize="14sp" />

    <EditText
        android:id="@+id/editTextTextPassword"
        android:layout_width="match_parent"
        android:layout_height="51dp"
        android:layout_marginHorizontal="24dp"
        android:layout_marginTop="12dp"
        android:background="@drawable/rounded_white_text_background"
        android:elevation="8dp"
        android:ems="10"
        android:hint="@string/enter_your_password"
        android:inputType="textPassword"
        android:paddingHorizontal="20dp"
        android:textSize="14sp" />

    <TextView
        android:id="@+id/btn_forget_password"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="end"
        android:layout_marginEnd="24dp"
        android:alpha="0.8"
        android:background="@android:color/transparent"
        android:paddingVertical="12dp"
        android:text="@string/forget_your_password"
        android:textSize="12sp" />

    <Button
        android:id="@+id/btn_sign_in"
        android:layout_width="match_parent"
        android:layout_height="45dp"
        android:layout_marginHorizontal="20dp"
        android:layout_marginVertical="10dp"
        android:background="@color/blue_300"
        android:text="@string/sign_in"
        android:textAllCaps="false"
        android:textColor="@color/white"
        android:textSize="16sp" />

    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="24dp"
        android:gravity="center_vertical"
        android:orientation="horizontal">

        <View
            android:layout_width="0dp"
            android:layout_height="2dp"
            android:layout_weight="1"
            android:background="@drawable/horizontal_line" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:alpha="0.7"
            android:text="@string/or_sign_in_with"
            android:textColor="#0A72BA"
            android:textSize="14sp" />

        <View
            android:layout_width="0dp"
            android:layout_height="2dp"
            android:layout_weight="1"
            android:background="@drawable/horizontal_line" />

    </LinearLayout>

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/btn_sign_in_with_google"
        android:layout_width="match_parent"
        android:layout_height="51dp"
        android:layout_marginHorizontal="24dp"
        android:layout_marginTop="15dp"
        android:background="@drawable/rounded_white_text_background"
        android:drawableLeft="@drawable/google_icon"
        android:paddingHorizontal="24dp"
        android:text="@string/sign_in_with_google"
        android:textAllCaps="false"
        android:textColor="@color/blue_300"
        android:textSize="14sp" />

    <androidx.appcompat.widget.AppCompatButton
        android:layout_width="match_parent"
        android:layout_height="51dp"
        android:id="@+id/btn_sign_in_with_phone_number"
        android:layout_marginHorizontal="24dp"
        android:layout_marginTop="12dp"
        android:background="@drawable/rounded_black_text_background"
        android:drawableLeft="@drawable/telephone"
        android:paddingHorizontal="24dp"
        android:text="@string/sign_in_with_phone_number"
        android:textAllCaps="false"
        android:textColor="@color/white"
        android:textSize="14sp" />

    <View
        android:layout_width="wrap_content"
        android:layout_height="0dp"
        android:layout_weight="1" />
    <LinearLayout
        android:id="@+id/linearLayout3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="15dp"
        android:layout_gravity="center_horizontal"
        android:orientation="horizontal"
        >

        <TextView
            android:id="@+id/tv_no_account"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/have_no_account"
            android:textColor="@color/black"
            android:textSize="14sp"  />

        <Button
            android:id="@+id/btn_sign_up"
            style="@style/Widget.AppCompat.Button.Borderless"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="5sp"
            android:background="?android:attr/selectableItemBackground"
            android:minWidth="0dp"
            android:minHeight="0dp"
            android:text="@string/sign_up"
            android:textColor="#0A72BA"
            android:textSize="14sp"
            android:textAllCaps="false"  />

    </LinearLayout>
</androidx.appcompat.widget.LinearLayoutCompat>