<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.authentication.ForgetPassword">

    <TextView
        android:id="@+id/txv_forget_password"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/forget_password"
        android:textColor="@color/horizontal_line_color"
        android:textSize="40sp"
        android:textStyle="bold"
        tools:layout_editor_absoluteX="26dp"
        tools:layout_editor_absoluteY="33dp" />

    <TextView
        android:id="@+id/txv_forget_password_description"
        android:layout_width="371dp"
        android:layout_height="76dp"
        android:alpha="0.8"
        android:text="@string/forget_password_description"
        android:textColor="@color/black"
        android:textSize="20sp"
        tools:layout_editor_absoluteX="26dp"
        tools:layout_editor_absoluteY="100dp" />

    <ImageView
        android:id="@+id/iv_forget_password"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:srcCompat="@drawable/forget_password"
        tools:layout_editor_absoluteX="36dp"
        tools:layout_editor_absoluteY="186dp" />

    <EditText
        android:id="@+id/editTextTextEmailAddress"
        android:layout_width="287dp"
        android:layout_height="0dp"
        android:background="@drawable/rounded_white_text_background"
        android:elevation="8dp"
        android:ems="10"
        android:hint="@string/enter_your_email_address"
        android:inputType="textEmailAddress"
        android:singleLine="true"
        android:textColor="#000000"
        android:textSize="14sp"
        tools:layout_editor_absoluteX="36dp"
        tools:layout_editor_absoluteY="355dp" />

    <Button
        android:id="@+id/btn_sign_in"
        android:layout_width="164dp"
        android:layout_height="0dp"
        android:background="@color/blue_300"
        android:text="@string/send"
        android:textColor="@color/white"
        android:textSize="16sp"
        tools:layout_editor_absoluteX="81dp"
        tools:layout_editor_absoluteY="427dp" />

</androidx.constraintlayout.widget.ConstraintLayout>