<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.authentication.OTP">

    <com.google.android.material.appbar.MaterialToolbar
        android:id="@+id/toolbar"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="19dp"
        app:layout_constraintBottom_toTopOf="@+id/txv_OTP_verification"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:navigationIcon="@drawable/baseline_arrow_back_ios_24"
        app:title="@string/app_name"
        app:titleCentered="true">

    </com.google.android.material.appbar.MaterialToolbar>

    <TextView
        android:id="@+id/txv_OTP_verification"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="12dp"
        android:layout_marginBottom="34dp"
        android:text="@string/OTP_verification"
        android:textColor="@color/horizontal_line_color"
        android:textSize="40sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/txv_OTP_description"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/toolbar" />

    <TextView
        android:id="@+id/txv_OTP_description"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginStart="12dp"
        android:layout_marginEnd="12dp"
        android:layout_marginBottom="32dp"
        android:alpha="0.8"
        android:text="@string/OTP_description"
        android:textColor="@color/black"
        android:textSize="20sp"
        app:layout_constraintBottom_toTopOf="@+id/iv_forget_password"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txv_OTP_verification" />

    <ImageView
        android:id="@+id/iv_forget_password"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginStart="12dp"
        android:layout_marginEnd="12dp"
        android:layout_marginBottom="34dp"
        app:layout_constraintBottom_toTopOf="@+id/linearLayout2"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txv_OTP_description"
        app:srcCompat="@drawable/forget_password" />

    <LinearLayout
        android:id="@+id/linearLayout2"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="22dp"
        android:gravity="center"
        android:orientation="horizontal"
        app:layout_constraintBottom_toTopOf="@+id/linearLayout4"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/iv_forget_password"
        tools:ignore="MissingConstraints">

        <EditText
            android:id="@+id/inputCode1"
            android:layout_width="40dp"
            android:layout_height="45dp"
            android:gravity="center"
            android:imeOptions="actionNext"
            android:importantForAutofill="no"
            android:inputType="number"
            android:maxLength="1"
            android:textColor="@color/black"
            android:textSize="24sp"
            android:textStyle="bold"
            tools:ignore="LabelFor" />


        <EditText
            android:id="@+id/inputCode2"
            android:layout_width="40dp"
            android:layout_height="45dp"
            android:layout_marginStart="4dp"
            android:gravity="center"
            android:imeOptions="actionNext"
            android:importantForAutofill="no"
            android:inputType="number"
            android:maxLength="1"
            android:textColor="@color/black"
            android:textSize="24sp"
            android:textStyle="bold"
            tools:ignore="LabelFor" />

        <EditText
            android:id="@+id/inputCode3"
            android:layout_width="40dp"
            android:layout_height="45dp"
            android:layout_marginStart="4dp"
            android:gravity="center"
            android:imeOptions="actionNext"
            android:importantForAutofill="no"
            android:inputType="number"
            android:maxLength="1"
            android:textColor="@color/black"
            android:textSize="24sp"
            android:textStyle="bold"
            tools:ignore="LabelFor" />

        <EditText
            android:id="@+id/inputCode4"
            android:layout_width="40dp"
            android:layout_height="45dp"
            android:layout_marginStart="4dp"
            android:gravity="center"
            android:imeOptions="actionNext"
            android:importantForAutofill="no"
            android:inputType="number"
            android:maxLength="1"
            android:textColor="@color/black"
            android:textSize="24sp"
            android:textStyle="bold"
            tools:ignore="LabelFor" />

        <EditText
            android:id="@+id/inputCode5"
            android:layout_width="40dp"
            android:layout_height="45dp"
            android:layout_marginStart="4dp"
            android:gravity="center"
            android:imeOptions="actionNext"
            android:importantForAutofill="no"
            android:inputType="number"
            android:maxLength="1"
            android:textColor="@color/black"
            android:textSize="24sp"
            android:textStyle="bold"
            tools:ignore="LabelFor" />

        <EditText
            android:id="@+id/inputCode6"
            android:layout_width="40dp"
            android:layout_height="45dp"
            android:layout_marginStart="4dp"
            android:gravity="center"
            android:imeOptions="actionDone"
            android:importantForAutofill="no"
            android:inputType="number"
            android:maxLength="1"
            android:textColor="@color/black"
            android:textSize="24sp"
            android:textStyle="bold"
            tools:ignore="LabelFor" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/linearLayout4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="48dp"
        android:layout_marginBottom="35dp"
        android:gravity="center"
        android:orientation="horizontal"
        app:layout_constraintBottom_toTopOf="@+id/btn_confirm"
        app:layout_constraintStart_toStartOf="@+id/linearLayout2"
        app:layout_constraintTop_toBottomOf="@+id/linearLayout2"
        tools:ignore="MissingConstraints">


        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Didn't receive OTP code?"
            android:textColor="@color/blue_300"
            android:textSize="14sp" />

        <TextView
            android:id="@+id/textResendOTP"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:text="@string/resend_otp"
            android:textColor="@color/black"
            android:textSize="15sp"
            android:textStyle="bold" />
    </LinearLayout>

    <Button
        android:id="@+id/btn_confirm"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginStart="46dp"
        android:layout_marginEnd="46dp"
        android:layout_marginBottom="117dp"
        android:background="@color/blue_300"
        android:text="@string/confirm"
        android:textColor="@color/white"
        android:textSize="16sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/linearLayout4" />


</androidx.constraintlayout.widget.ConstraintLayout>